Use TAL_CONFIG_SUBDIR() in place of AC_CONFIG_SUBDIRS()

--- a/Makefile.am
+++ b/Makefile.am
@@ -14,6 +14,10 @@
 ##  See the License for the specific language governing permissions and
 ##  limitations under the License.
 
+ACLOCAL_AMFLAGS = -I M4
+
 EXTRA_DIST = README.md LICENSE-2.0
 
-SUBDIRS = @subdirs@
+SUBDIRS = @tal_subdirs@
+
+@tal_m4_update@
