--- a/configure.ac
+++ b/configure.ac
@@ -16,22 +16,22 @@
 
 AC_INIT([Talisker],[develop])
 
-AC_CANONICAL_BUILD
-AC_CANONICAL_HOST
-AC_CANONICAL_TARGET
-AC_CANONICAL_SYSTEM
+AC_CONFIG_AUX_DIR([BuildScripts])
+AC_CONFIG_MACRO_DIR([M4])
+
+TAL_CHECK_DOMAINS
 
 AM_INIT_AUTOMAKE([foreign])
 AM_MAINTAINER_MODE
 
-AC_CONFIG_SUBDIRS([Fonts])
-AC_CONFIG_SUBDIRS([ColorSchemes])
-AC_CONFIG_SUBDIRS([DesktopPictures])
-AC_CONFIG_SUBDIRS([UserPictures])
-AC_CONFIG_SUBDIRS([UserTemplate])
-AC_CONFIG_SUBDIRS([Sounds])
-AC_CONFIG_SUBDIRS([Stationery])
-AC_CONFIG_SUBDIRS([Icons])
+TAL_CONFIG_SUBDIR([Fonts])
+TAL_CONFIG_SUBDIR([ColorSchemes])
+TAL_CONFIG_SUBDIR([DesktopPictures])
+TAL_CONFIG_SUBDIR([UserPictures])
+TAL_CONFIG_SUBDIR([UserTemplate])
+TAL_CONFIG_SUBDIR([Sounds])
+TAL_CONFIG_SUBDIR([Stationery])
+TAL_CONFIG_SUBDIR([Icons])
 
 AC_CONFIG_FILES([
 Makefile
